--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@ body {
   background-image: url("img/background.jpg");
 }
 
-#logo {
+/* #logo {
   width: 50px;
   height: 50px;
   margin-top: 30px;
   position: relative;
   left: 50%;
   transform: translate(-50%, -50%);
-}
+} */
 
 .product {
     /* margin-top: 10px; */
