--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 } */
 
 .product {
-    /* margin-top: 10px; */
+  margin-top: 10px;
   padding: 10px;
   background-color: rgba(200, 200, 200, 0.5);
   border-radius: 10px;
