1. changing CDNs by local files

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,6 @@
 body {
-  background-image: url("img/background.jpg");
+  background-image: url("../img/background.jpg");
 }
-
-/* #logo {
-  width: 50px;
-  height: 50px;
-  margin-top: 30px;
-  position: relative;
-  left: 50%;
-  transform: translate(-50%, -50%);
-} */
 
 .product {
   margin-top: 10px;
