Inserção de conteúdo requerido pelo Google Adsense

--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,17 @@ h1 {
 
 button {
   margin-top: 10px;
+  margin-bottom: 300px !important;
 }
 
 span {
   background: yellow;
 	padding: 3px 0 !important;
 	position: relative;
+}
+
+@media only screen and (max-width: 481px) { // smartphone landscape
+  button {
+    margin-bottom: 20px !important;
+  }
 }
